# Information-Diffusion-Lag

./: .gitignore  DEPLOY.md  Dockerfile  README.md  cache_data.py  count_events.py  docker-compose.yml  download_backtest_data.py  generate_paper_charts.py  label_questions.py  main.py  optimize_cem.py  plot_cem_results.py  polymarket-oracle-strategy-v4.html  pyproject.toml  requirements.txt  scan_historical.py  statistical_tests.py  temp_analysis.py  temp_analysis2.py  temp_dd.py  temp_early.py  temp_forensics.py
LLM/: gemini_client.py
analysis/: analyze_selection_order.py  analyze_trade_forensics.py  build_oos_diagnostics.py  generate_paper_charts.py  plot_cem_results.py  statistical_tests.py
backtesting/: __init__.py  optimize_cem.py
core/: __init__.py  features.py  kernel.py  polarity.py  policy.py
data/: backtest_equity_log.csv  candidates.parquet  candidates_audit_clean.parquet  candidates_old.parquet  catalyst_results.json  catalyst_results_macro.json  experiment_results_clean.csv  experiment_walkforward_folds_clean.csv  overnight_research_report.md  polarity_labels.json  probs.pkl
data_pipeline/: check_db_worlds.py  dedup_macro.py  download_missing_probs.py  pipeline_macro_56.py  scan_macro.py  scan_macro_assets.py
database/: __init__.py  db_connection.py
diagnostics/: compare_t3_vs_t4_qqq.py  polarity_audit.py  run_cem_loss_attribution.py  run_raw_expectation_test_tminus1.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
ingest/: __init__.py  __main__.py  artifacts.py  chain.py  dedup.py  evaluator.py  gemini_client.py  label_polarity.py  (+4 more)
(+118 files in other folders)
